Added the MySQL database to store and get the ratings